--- a/charts/datalab/templates/postgres-init-script-secret.yaml
+++ b/charts/datalab/templates/postgres-init-script-secret.yaml
@@ -8,7 +8,7 @@ type: Opaque
 stringData:
   my_init_script.sh: |
     #!/bin/sh
-    psql postgresql://postgres:{{.Values.postgresql.postgresqlPostgresPassword}}@localhost:5432/user << EOF
+    psql postgresql://postgres:{{.Values.dpostgresql.postgresqlPostgresPassword}}@localhost:5432/user << EOF
         CREATE DATABASE keycloak WITH ENCODING 'UTF8' LC_COLLATE='en_US.UTF-8' LC_CTYPE='en_US.UTF-8';
         CREATE USER keycloak WITH ENCRYPTED PASSWORD 'keycloak';
         GRANT ALL PRIVILEGES ON DATABASE keycloak TO keycloak;
@@ -31,5 +31,10 @@ stringData:
         CREATE DATABASE superset WITH ENCODING 'UTF8' LC_COLLATE='en_US.UTF-8' LC_CTYPE='en_US.UTF-8';
         CREATE USER superset WITH ENCRYPTED PASSWORD 'superset';
         GRANT ALL PRIVILEGES ON DATABASE superset TO superset;
+
+        CREATE DATABASE gitlabhq_production WITH ENCODING 'UTF8' LC_COLLATE='en_US.UTF-8' LC_CTYPE='en_US.UTF-8';
+        CREATE USER gitlab SUPERUSER;
+        ALTER USER gitlab WITH ENCRYPTED PASSWORD 'gitlab-password';
+        GRANT ALL PRIVILEGES ON DATABASE gitlabhq_production TO gitlab;
       EOF
     
