Pulled Sprint 7 changes

--- a/charts/datalab/templates/gitlab-email-secret.yaml
+++ b/charts/datalab/templates/gitlab-email-secret.yaml
@@ -8,5 +8,5 @@ metadata:
     helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 type: Opaque
 stringData:
-  password: "password"
+  password: "passowrd"
 
