--- a/charts/datalab/templates/gitlab-secrets.yaml
+++ b/charts/datalab/templates/gitlab-secrets.yaml
@@ -12,22 +12,18 @@ stringData:
   email-password: "passowrd"
   connection: |
     provider: AWS
-    # Specify the region
-    region: eu-west-1
-    # Specify access/secret keys
+    region: eu-central-1
     aws_access_key_id: {{ .Values.dminio.auth.rootUser }} 
     aws_secret_access_key: {{ .Values.dminio.auth.rootPassword }}
-    # The below settings are for S3 compatible endpoints
-    #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
     aws_signature_version: 4
     host: minio.{{ .Values.domainName }}
-    endpoint: "https://minio.{{ .Values.domainName }}:9000"
+    endpoint: "https://minio.{{ .Values.domainName }}"
     path_style: true
   redis-password: "redis-password"
   s3cmd-config: | 
     access_key: {{ .Values.dminio.auth.rootUser }} 
     secret_key: {{ .Values.dminio.auth.rootPassword }}
-    bucket_location: eu-west-1
+    bucket_location: eu-central-1
     multipart_chunk_size_mb: 128
   minio-credentials: |
     access_key: {{ .Values.dminio.auth.rootUser }} 
@@ -37,7 +33,7 @@ stringData:
       v4auth: true
       regionendpoint: "https://minio.{{ .Values.domainName }}"
       pathstyle: true
-      region: eu-west-1
+      region: eu-central-1
       bucket: gitlab-registry-storage
       accesskey: {{ .Values.dminio.auth.rootUser }} 
       secretkey: {{ .Values.dminio.auth.rootPassword }}
