--- a/charts/datalab/templates/postgres-init-script-secret.yaml
+++ b/charts/datalab/templates/postgres-init-script-secret.yaml
@@ -36,5 +36,9 @@ stringData:
         CREATE USER gitlab SUPERUSER;
         ALTER USER gitlab WITH ENCRYPTED PASSWORD 'gitlab-password';
         GRANT ALL PRIVILEGES ON DATABASE gitlabhq_production TO gitlab;
+
+        \c ckan_default
+        CREATE TABLE user_token (user_name VARCHAR, access_token VARCHAR, token_type VARCHAR, refresh_token VARCHAR, expires_in VARCHAR, PRIMARY KEY (user_name));
+        ALTER TABLE public.user_token OWNER TO ckan_default;
       EOF
     
