--- a/charts/datalab/values.yaml
+++ b/charts/datalab/values.yaml
@@ -21,11 +21,13 @@ demo:
     - name: jondoe
       password: jondoe
       groups:
+        - demo
         - g1
         - g2
     - name: janedoe
       password: janedoe
       groups:
+        - demo
         - g1
   projects:
     - name: g1
@@ -217,7 +219,9 @@ keycloak:
     enabled: true
     annotations:
       kubernetes.io/ingress.class: nginx
-      nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+      nginx.ingress.kubernetes.io/proxy-body-size: "0"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     rules:
       - host: "keycloak.example.test"
         paths:
@@ -249,6 +253,16 @@ dminio:
     enabled: true
     # size: 1024Gi
 
+  service:
+    ## @param service.type MinIO&reg; service type
+    ##
+    type: ClusterIP
+    ## @param service.ports.api MinIO&reg; API service port
+    ## @param service.ports.console MinIO&reg; Console service port
+    ##
+    ports:
+      api: 9000
+  
   # (TODO) Set MinIO root credentials (password has to be bigger than 8 characters)
   auth:
     rootUser: &minioRootUser "minio-admin"
@@ -266,7 +280,7 @@ dminio:
     - name: MINIO_DOMAIN
       value: "minio.example.test"
     - name: MINIO_IDENTITY_OPENID_CLAIM_NAME
-      value: policy
+      value: groups
     - name: MINIO_IDENTITY_OPENID_REDIRECT_URI
       value: https://minio-console.example.test/oauth_callback
     - name: MINIO_IDENTITY_OPENID_SCOPES
@@ -885,6 +899,10 @@ superset:
   clientsecret: your-client-secret
   flasksecret: your-flask-secret
   configSSO: keycloak.example.test
+
+  adminList: ["demo"]
+  alphaList: ["jondoe"]
+
   ingress:
     enabled: true
     ingressClassName: nginx
