Pulled Sprint 9 changes

--- a/charts/datalab/templates/gitlab-secrets.yaml
+++ b/charts/datalab/templates/gitlab-secrets.yaml
@@ -9,15 +9,15 @@ metadata:
 type: Opaque
 stringData:
   psql-password: gitlab-password
-  email-password: "passowrd"
+  email-password: nhDPS,8+Gsh]~2+5
   connection: |
     provider: AWS
     region: eu-central-1
     aws_access_key_id: {{ .Values.dminio.auth.rootUser }} 
     aws_secret_access_key: {{ .Values.dminio.auth.rootPassword }}
     aws_signature_version: 4
-    host: minio.{{ .Values.domainName }}
-    endpoint: "https://minio.{{ .Values.domainName }}"
+    host: minio.clouddatalab.eu
+    endpoint: "https://minio.clouddatalab.eu"
     path_style: true
   redis-password: "redis-password"
   s3cmd-config: | 
@@ -31,7 +31,7 @@ stringData:
   registry-storage : |
     s3:
       v4auth: true
-      regionendpoint: "https://minio.{{ .Values.domainName }}"
+      regionendpoint: "https://minio.clouddatalab.eu"
       pathstyle: true
       region: eu-central-1
       bucket: gitlab-registry-storage
