--- a/charts/datalab/Chart.yaml
+++ b/charts/datalab/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.7.0
+version: 0.4.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -64,3 +64,6 @@ dependencies:
   - name: gitlab
     version: 5.7.0
     repository: https://charts.gitlab.io
+  - name: kubernetes-dashboard
+    version: 2.5.0
+    repository: https://kubernetes.github.io/dashboard/
